--- a/events/SuperMario.html
+++ b/events/SuperMario.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <img class="img" src="./mario.png" alt="superMarioPic">
+    <script src="./SuperMario.js"></script>
 </body>
 </html>
